# mcp-trillium

./: .env.example  .gitignore  Dockerfile  backup.sh  docker-compose.yml  main.py  pyproject.toml  run_mcp.sh
